finish commit